--- a/templates/config/configmap-scripts-git.yaml
+++ b/templates/config/configmap-scripts-git.yaml
@@ -75,3 +75,17 @@ data:
       date;
       sleep $SYNC_TIME;
     done
+  lithops-plugin.sh: |
+    #!/bin/sh -e
+
+    mkdir /home/airflow/plugins
+
+    # ensure the git directory is empty, so we can safely clone
+    if [ -d "$DIR" ]; then
+      rm -rf $( find $DIR -mindepth 1 )
+    fi
+
+    git clone https://github.com/lithops-cloud/airflow-plugin.git
+    cd airflow-plugin
+
+    cp -r lithops_airflow_plugin /home/airflow/plugins
